samples/_failures_safe/1761537868_4619ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8328173.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b8328173.c:151:18: error: expected ‘;’ at end of input
  151 |             lexer
      |                  ^
      |                  ;
./samples/SAFE/__tmp_b8328173.c:151:13: error: expected declaration or statement at end of input
  151 |             lexer
      |             ^~~~~
./samples/SAFE/__tmp_b8328173.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b8328173.c:151:13: error: expected declaration or statement at end of input
